# pineapple-pictures

./: .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NEWS  PineapplePictures.pro  README.md  README.zh_CN.md  REUSE.toml  aboutdialog.cpp  aboutdialog.h  appveyor.yml  bottombuttongroup.cpp  bottombuttongroup.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  metadatadialog.h  metadatamodel.cpp  metadatamodel.h  navigatorview.cpp  navigatorview.h  pineapple-pictures.desktop  pineapple-pictures.pro  pineapple-pictures.rc  resources.qrc  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  toolbutton.cpp  toolbutton.h
.github/: FUNDING.yml
.github/workflows/: deepin.yml  macos.yml  main.yml  reuse-check.yml  ubuntu.yml  windows.yml
.reuse/: dep5
app/: aboutdialog.cpp  aboutdialog.h  actionmanager.cpp  actionmanager.h  bottombuttongroup.cpp  bottombuttongroup.h  clientsidedecoration.cpp  clientsidedecoration.h  exiv2wrapper.cpp  exiv2wrapper.h  fileopeneventhandler.cpp  fileopeneventhandler.h  framelesswindow.cpp  framelesswindow.h  graphicsscene.cpp  graphicsscene.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  metadatadialog.cpp  metadatadialog.h  metadatamodel.cpp  metadatamodel.h  navigatorview.cpp  navigatorview.h  opacityhelper.cpp  opacityhelper.h  playlistmanager.cpp  playlistmanager.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  shortcutedit.cpp  shortcutedit.h  titlebar.cpp  titlebar.h  toolbutton.cpp  (+1 more)
app/translations/: PineapplePictures.ts  PineapplePictures_ca.ts  PineapplePictures_de.ts  PineapplePictures_en.ts  PineapplePictures_es.ts  PineapplePictures_fr.ts  PineapplePictures_id.ts  PineapplePictures_it.ts  PineapplePictures_ja.ts  PineapplePictures_ko.ts  PineapplePictures_nb_NO.ts  PineapplePictures_nl.ts  PineapplePictures_pa_PK.ts  PineapplePictures_ru.ts  PineapplePictures_si.ts  PineapplePictures_sl.ts  PineapplePictures_ta.ts  PineapplePictures_tr.ts  PineapplePictures_uk.ts  PineapplePictures_vi.ts  PineapplePictures_zh_CN.ts
assets/: pineapple-pictures.rc  pineapple-pictures.rc.in  resources.qrc
assets/icons/: app-icon.icns
assets/plain/: translators.html
cmake/: FindLibExiv2.cmake
languages/: PineapplePictures.ts  PineapplePictures_zh_CN.ts
translations/: PineapplePictures.ts  PineapplePictures_de.ts  PineapplePictures_es.ts  PineapplePictures_fr.ts  PineapplePictures_ja.ts  PineapplePictures_nb_NO.ts  PineapplePictures_nl.ts  PineapplePictures_ru.ts  PineapplePictures_si.ts  PineapplePictures_zh_CN.ts
